Read ECLI from footer
Read all footer information from the docx file. Add ECLI from the footer to the front of the converted html.

Also put the ECLI to the documentation unit if only one ECLI was found in the footers and no ECLI is set in the documentation unit

Address RISDEV-2739